login_register_view
menambahkan activity login&register, dan juga xml / view dari aplikasi GrowFood. Ini belum termasuk behavior button atau pun database nya, tetapi sudah ditambahkan clickable span nya

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Growfood.Starting"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".RegisterActivity"
+            android:theme="@style/Theme.GrowFood"
+            android:exported="false"></activity>
+
+        <activity
+            android:name=".LoginActivity"
             android:theme="@style/Theme.GrowFood"
             android:exported="true">
             <intent-filter>
