menambahkan view Home Page
menambahkan recycle view , dan item artikel

kekurangan :
- bottom navbar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
     compileSdk 33
 
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.example.growfood"
         minSdk 29
         targetSdk 33
